terraform/aws/modules/secondary/security_group.tf
resource "aws_security_group" "allow_http_https" {
  name        = "secondary task Allow http and https"
  vpc_id      = aws_vpc.secondary_task_vpc.id

  tags = {
    Name = "secondary-task-ec2-sg"
  }
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.allow_http_https.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}

resource "aws_vpc_security_group_ingress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.allow_http_https.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
